--- a/src/assets/css/templates/homepage.css
+++ b/src/assets/css/templates/homepage.css
@@ -25,13 +25,15 @@
 					font-size: 20px;
 				}
 
-				button {
+				a {
 					background-color: $cc-dark-brown;
 					color: white;
 					font-family: $font-serif-bold;
 					font-size: 30px;
 					margin-top: 3%;
 					padding: 1% 2%;
+					display: inline-block;
+					text-decoration: none;
 				}
 			}
 
@@ -306,13 +308,15 @@
 				line-height: 1.1;
 			}
 
-			button {
+			a {
 				background-color: $cc-green;
 				color: white;
 				font-family: $font-serif-bold;
 				font-size: 30px;
 				margin-top: 5%;
 				padding: 2% 5%;
+				text-decoration: none;
+				display: inline-block;
 			}
 		}
 
