--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -17,7 +17,7 @@
 				</a>
 			</div>
 			<div class="ccf-contact">
-				<p><u>Contact Us</u></p>
+				<p><a href="./contact.html">Contact Us</a></p>
 				<p>416-429-6111</p>
 				<p>1111 Finch Avenue West</p>
 				<p>Unit #43</p>
