--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,8 @@
 <header class="competition-coffee-header competition-coffee-wrapper">
 	<div class="cch-logo-container">
-		<img src="{{root}}static/images/logo.png" alt="">
+			<a href="index.html">		
+				<img src="{{root}}static/images/logo.png" alt="">
+			</a>
 	</div>
 	<div class="cch-contact-menu">
 		<div class="cch-contact">
