--- a/src/assets/css/templates/equipment.css
+++ b/src/assets/css/templates/equipment.css
@@ -67,7 +67,10 @@
 				font-size: 20px;
 				margin-top: 5%;
 				padding: 1% 2%;
-				text-decoration: none
+				text-decoration: none;
+				width: 135px;
+				height: 32px;
+				text-align: center;
 			}
 		}
 
@@ -198,8 +201,8 @@
 
 		.cce-cta-content-container {
 			background-color: $cc-beige;
-			padding: 14% 2% 0 20%;
-			width: 40%;
+			padding: 10% 2% 0 12%;
+			width: 45%;
 
 			p {
 				color: $cc-dark-brown;
@@ -221,7 +224,7 @@
 		}
 
 		.cce-cta-image {
-			width: 60%;
+			width: 55%;
 
 			img {
 				height: 100%;
