--- a/src/assets/css/templates/homepage.css
+++ b/src/assets/css/templates/homepage.css
@@ -30,10 +30,11 @@
 					color: white;
 					font-family: $font-serif-bold;
 					font-size: 30px;
-					margin-top: 3%;
+					margin-top: 10%;
 					padding: 1% 2%;
 					display: inline-block;
 					text-decoration: none;
+					text-transform:uppercase;
 				}
 			}
 
@@ -41,6 +42,10 @@
 				display: flex;
 				justify-content: center;
 				width: 50%;
+
+				img{
+					max-width: 100%
+				}
 			}
 		}
 	}
@@ -163,6 +168,7 @@
 			ul{ 
 				display: flex;
 				flex-wrap: wrap;
+				justify-content: space-between;
 				li{
 					flex: 0 20%;
 					display: flex;
@@ -189,7 +195,7 @@
 				display: flex;
 				flex-wrap: wrap;
 				li{
-					flex: 0 20%;
+					flex: 0 33%;
 					display: flex;
 					align-items: center;
 					justify-content: center;
@@ -269,7 +275,7 @@
 					font-size: 25px;
 					margin: 8% 0 5% 0;
 					text-align: center;
-					text-transform: uppercase;
+					text-transform: capitalize;
 				}
 
 				p {
@@ -298,8 +304,8 @@
 
 		.ccho-cta-content-container {
 			background-color: $cc-beige;
-			padding: 8% 0 0 20%;
-			width: 50%;
+			padding: 10% 2% 0 12%;
+			width: 45%;
 
 			p {
 				color: $cc-dark-brown;
@@ -321,7 +327,7 @@
 		}
 
 		.ccho-cta-image {
-			width: 50%;
+			width: 55%;
 
 			img {
 				height: 100%;
