--- a/src/assets/css/templates/slicknav.css
+++ b/src/assets/css/templates/slicknav.css
@@ -3,38 +3,45 @@
  * (c) 2016 Josh Cope
  * licensed under MIT
  */
-.slicknav_btn {
+
+ .slicknav_btn {
   position: relative;
   display: block;
   vertical-align: middle;
   float: right;
   padding: 0.438em 0.625em 0.438em 0.625em;
   line-height: 1.125em;
-  cursor: pointer; }
-  .slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
-    margin-top: 0.188em; }
+  cursor: pointer;
+  .slicknav_icon-bar + .slicknav_icon-bar {
+    margin-top: 0.188em;
+  }
+}
 
 .slicknav_menu {
-  *zoom: 1; }
-  .slicknav_menu .slicknav_menutxt {
+  *zoom: 1;
+  .slicknav_menutxt {
     display: block;
     line-height: 1.188em;
-    float: left; }
-  .slicknav_menu .slicknav_icon {
+    float: left;
+  }
+  .slicknav_icon {
     float: right;
     width: 1.125em;
     height: 0.875em;
-    margin: 0.188em 0 0 0.438em; }
-    .slicknav_menu .slicknav_icon:before {
+    margin: 0.188em 0 0 0.438em;
+    &:before {
       background: transparent;
       width: 1.125em;
       height: 0.875em;
       display: block;
       content: "";
-      position: absolute; }
-  .slicknav_menu .slicknav_no-text {
-    margin: 0; }
-  .slicknav_menu .slicknav_icon-bar {
+      position: absolute;
+    }
+  }
+  .slicknav_no-text {
+    margin: 0;
+  }
+  .slicknav_icon-bar {
     display: block;
     width: 1.125em;
     height: 0.125em;
@@ -43,64 +50,79 @@
     border-radius: 1px;
     -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); }
-  .slicknav_menu:before {
-    content: " ";
-    display: table; }
-  .slicknav_menu:after {
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+  }
+  &:before {
     content: " ";
     display: table;
-    clear: both; }
+  }
+  &:after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
+}
 
 .slicknav_nav {
-  clear: both; }
-  .slicknav_nav ul {
-    display: block; }
-    .slicknav_nav li {
-      display: block;
-      background: #605352;
-      border-radius: 5px;
+  clear: both;
+  ul {
+    display: block;
   }
-  .slicknav_nav .slicknav_arrow {
+  li {
+    display: block;
+    background: #605352;
+    border-radius: 5px;
+  }
+  .slicknav_arrow {
     font-size: 0.8em;
-    margin: 0 0 0 0.4em; }
-  .slicknav_nav .slicknav_item {
-    cursor: pointer; }
-    .slicknav_nav .slicknav_item a {
-      display: inline; }
-  .slicknav_nav .slicknav_row {
-    display: block; }
-  .slicknav_nav a {
-    display: block; }
-  .slicknav_nav .slicknav_parent-link a {
-    display: inline; }
+    margin: 0 0 0 0.4em;
+  }
+  .slicknav_item {
+    cursor: pointer;
+    a {
+      display: inline;
+    }
+  }
+  .slicknav_row, a {
+    display: block;
+  }
+  .slicknav_parent-link a {
+    display: inline;
+  }
+}
 
 .slicknav_brand {
-  float: left; }
-
-  .slicknav_menu {
-    font-size: 1rem;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    background: #706463;
-    padding: 5px;
+  float: left;
 }
-  .slicknav_menu * {
-    box-sizing: border-box; }
-  .slicknav_menu .slicknav_menutxt {
+
+.slicknav_menu {
+  font-size: 1rem;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #706463;
+  padding: 5px;
+  * {
+    box-sizing: border-box;
+  }
+  .slicknav_menutxt {
     color: #fff;
     font-weight: bold;
-    text-shadow: 0 1px 3px #000; }
-  .slicknav_menu .slicknav_icon-bar {
-    background-color: #fff; }
-
-    .slicknav_btn {
-      margin: 0;
-      text-decoration: none;
-      text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-      border-radius: 4px;
-      /* background-color: #605352; */ width: 100%; cursor: pointer;
+    text-shadow: 0 1px 3px #000;
   }
+  .slicknav_icon-bar {
+    background-color: #fff;
+  }
+}
+
+.slicknav_btn {
+  margin: 0;
+  text-decoration: none;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  border-radius: 4px;
+  /* background-color: #605352; */
+  width: 100%;
+  cursor: pointer;
+}
 
 .slicknav_nav {
   color: #fff;
@@ -108,22 +130,27 @@
   padding: 0;
   font-size: 0.875em;
   list-style: none;
-  overflow: hidden; position: absolute; width: 100%;}
-  .slicknav_nav ul {
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  ul {
     list-style: none;
     overflow: hidden;
     padding: 0;
-    margin: 0 0 0 0px; }
-  .slicknav_nav .slicknav_row {
+    margin: 0 0 0 0px;
+  }
+  .slicknav_row {
     padding: 5px 10px;
-    margin: 2px 5px; }
-    .slicknav_nav .slicknav_row:hover {
+    margin: 2px 5px;
+    &:hover {
       -webkit-border-radius: 6px;
       -moz-border-radius: 6px;
       border-radius: 6px;
       background: #ccc;
-      color: #fff; }
-  .slicknav_nav a {
+      color: #fff;
+    }
+  }
+  a {
     padding: 5px 15px;
     margin: 0px;
     color: #fff;
@@ -131,46 +158,48 @@
     font-family: 'Klinic Book', serif;
     font-size: 40px;
     text-decoration: none;
-    letter-spacing: 1px; 
+    letter-spacing: 1px;
     height: 100%;
     text-align: center;
     align-items: center;
     justify-content: center;
     display: flex;
-   }
-   .slicknav_nav a {border-bottom: 1px solid #fff}
-    .slicknav_nav a:hover {
+    border-bottom: 1px solid #fff;
+    &:hover {
       -webkit-border-radius: 6px;
       -moz-border-radius: 6px;
       border-radius: 6px;
       background: #ccc;
-      color: #222; }
-  /* .slicknav_nav .slicknav_txtnode {
-    margin-left: 15px; } */
-  .slicknav_nav .slicknav_item a {
+      color: #222;
+    }
+  }
+  .slicknav_item a, .slicknav_parent-link a {
     padding: 0;
-    margin: 0; }
-  .slicknav_nav .slicknav_parent-link a {
-    padding: 0;
-    margin: 0; }
+    margin: 0;
+  }
+}
+
+/* .slicknav_nav .slicknav_txtnode {
+  margin-left: 15px; } */
 
 .slicknav_brand {
   color: #fff;
   font-size: 18px;
   line-height: 30px;
   padding: 7px 12px;
-  height: 44px; }
-  
+  height: 44px;
+}
+
+.slicknav_menu {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  #menu {
+    display: none;
+  }
   .slicknav_menu {
-    display:none;
+    display: block;
+    margin-top: 100px;
   }
-  
-  @media screen and (max-width: 767px) {
-    #menu {
-      display:none;
-    }
-    
-    .slicknav_menu {
-      display:block; margin-top: 100px
-    }
-  }
+}
