--- a/src/assets/css/templates/snacks.css
+++ b/src/assets/css/templates/snacks.css
@@ -11,189 +11,235 @@
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
-}
-
-.competition-coffee-about .cca-snacks-content-container h1 {
+  }
+  
+  .competition-coffee-about .cca-snacks-content-container h1 {
     /* border:  0; */
-    margin-top:  25px;
-    margin-bottom: 12px;
-}
-
-.competition-coffee-about .cca-snacks-content-container h1:after {
-    border:  0;
-}
-.competition-coffee-snacks .cce-equipment-container {
-    margin: 66px auto 0 auto;
-    max-width: 1100px;
-    width: 100%;
-}
-.competition-coffee-snacks .cce-equipment-container h1 {
-    color: #706463;
-    font-family: 'Big John', sans-serif;
-    font-size: 1.875rem;
-    padding-bottom: 5%;
-    position: relative;
-}
-.competition-coffee-snacks .cce-equipment-container h1:after {
-    border-bottom: 3px solid #88c392;
-    content: '';
-    height: 3px;
-    left: 0px;
-    position: absolute;
-    top: 40px;
-    width: 100%;
-}
-.competition-coffee-snacks .cce-equipment-container .cce-equipment-row {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+    margin-top: 25px;
+    margin-bottom: 0px;
+    &:after {
+      border: 0;
+    }
+  }
+  
+  .competition-coffee-snacks {
+    .cce-equipment-container {
+      margin: 15px auto 0 auto;
+      max-width: 1100px;
+      width: 100%;
+      h1 {
+        color: #706463;
+        font-family: 'Big John', sans-serif;
+        font-size: 1.875rem;
+        padding-bottom: 5%;
+        position: relative;
+        &:after {
+          border-bottom: 3px solid #88c392;
+          content: '';
+          height: 3px;
+          left: 0px;
+          position: absolute;
+          top: 40px;
+          width: 100%;
+        }
+      }
+      .cce-equipment-row {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        .cce-equipment-column {
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+          -ms-flex-align: center;
+          align-items: center;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+          flex-direction: column;
+          height: 400px;
+          -webkit-box-pack: justify;
+          -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+          justify-content: space-between;
+        }
+        .cce-coffee-column {
+          height: auto;
+          .cce-coffee-image-container {
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+            -ms-flex-align: center;
+            align-items: center;
+          }
+        }
+        .cce-equipment-column .cce-equipment-image-container {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+          -webkit-justify-content: center;
+          -ms-flex-pack: center;
+          justify-content: center;
+          height: auto;
+          width: auto;
+        }
+        .cce-coffee-column {
+          .cce-coffee-image-container img {
+            height: auto;
+            max-width: 100%;
+          }
+          p {
+            color: #605352;
+            font-size: 1.25rem;
+          }
+        }
+      }
+    }
+    .ccho-content {
+      -moz-box-shadow: 2px 2px 27px 0px rgba(0, 0, 0, 0.15);
+      -webkit-box-shadow: 2px 2px 27px 0px rgba(0, 0, 0, 0.15);
+      background-color: white;
+      box-shadow: 2px 2px 27px 0px rgba(0, 0, 0, 0.15);
+      margin-bottom: 3%;
+      margin-top: 3%;
+      .ccho-content-container {
+        margin: 8% 0;
+        padding: 5%;
+        h1 {
+          color: #706463;
+          font-family: 'Big John', sans-serif;
+          font-size: 1.875rem;
+          position: relative;
+          &:after {
+            border-bottom: 3px solid #88c392;
+            content: '';
+            height: 3px;
+            left: 0px;
+            position: absolute;
+            top: 40px;
+            width: 100%;
+          }
+        }
+        .ccho-content-copy-container {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          width: 100%;
+          .ccho-content-copy {
+            width: 50%;
+          }
+          .ccho-content-copy-steps {
+            padding-top: 8%;
+            width: 50%;
+          }
+          .ccho-content-copy {
+            h3 {
+              color: #706463;
+              font-family: 'Klinic Bold', serif;
+              font-size: 1.875rem;
+              padding-bottom: 2%;
+            }
+            p {
+              color: #706463;
+              font-family: 'Klinic Book', serif;
+              font-size: 1.25rem;
+              line-height: 1.3;
+              padding-bottom: 3%;
+              strong {
+                font-family: 'Klinic Bold', serif;
+              }
+            }
+          }
+          .ccho-content-image--large {
+            height: 100%;
+            padding: 8% 0 0 5%;
+            width: 50%;
+            img {
+              height: 40%;
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+    .cca-our-services {
+      display: block;
+      margin-top: -290px;
+    }
+    .cca-snacks-content-box {
+      .cca-about-content-image {
+        align-items: center;
+      }
+      margin-top: 28%;
+    }
+  }
+  
+  .competition-snacks-wrapper .cca-about-content-copy h1:after {
+    display: none;
+  }
+  
+  .competition-coffee-snacks .competition-snacks-wrapper {
     display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-.competition-coffee-snacks .cce-equipment-container .cce-equipment-row .cce-equipment-column {
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    height: 400px;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-.competition-coffee-snacks .cce-equipment-container .cce-equipment-row .cce-coffee-column {
-    height: auto;
-}
-.competition-coffee-snacks .cce-equipment-container .cce-equipment-row .cce-coffee-column .cce-coffee-image-container {
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-.competition-coffee-snacks .cce-equipment-container .cce-equipment-row .cce-equipment-column .cce-equipment-image-container {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    height: 270px;
-    width: auto;
-}
-.competition-coffee-snacks .cce-equipment-container .cce-equipment-row .cce-coffee-column .cce-coffee-image-container img {
-    height: auto;
-    max-width: 100%;
-}
-.competition-coffee-snacks .cce-equipment-container .cce-equipment-row .cce-coffee-column p {
-    color: #605352;
-    font-size: 1.25rem;
-}
-.competition-coffee-snacks .ccho-content {
-    -moz-box-shadow: 2px 2px 27px 0px rgba(0,0,0,0.15);
-    -webkit-box-shadow: 2px 2px 27px 0px rgba(0,0,0,0.15);
     background-color: white;
-    box-shadow: 2px 2px 27px 0px rgba(0,0,0,0.15);
-    margin-bottom: 3%;
-    margin-top: 3%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container {
-    margin: 8% 0;
-    padding: 5%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container h1 {
-    color: #706463;
-    font-family: 'Big John', sans-serif;
-    font-size: 1.875rem;
-    position: relative;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container h1:after {
-    border-bottom: 3px solid #88c392;
-    content: '';
-    height: 3px;
-    left: 0px;
-    position: absolute;
-    top: 40px;
-    width: 100%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-copy {
-    width: 50%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-copy-steps {
-    padding-top: 8%;
-    width: 50%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-copy h3 {
-    color: #706463;
-    font-family: 'Klinic Bold', serif;
-    font-size: 1.875rem;
-    padding-bottom: 2%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-copy p {
-    color: #706463;
-    font-family: 'Klinic Book', serif;
-    font-size: 1.25rem;
-    line-height: 1.3;
-    padding-bottom: 3%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-copy p strong {
-    font-family: 'Klinic Bold', serif;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-image--large {
-    height: 100%;
-    padding: 8% 0 0 5%;
-    width: 50%;
-}
-.competition-coffee-snacks .ccho-content .ccho-content-container .ccho-content-copy-container .ccho-content-image--large img {
-    height: 40%;
-    width: 100%;
-}
-.competition-coffee-snacks .cca-our-services {
-    display: block;
-    margin-top: -290px;
-}
-
-.competition-coffee-snacks .cca-snacks-content-box .cca-about-content-image{align-items: center}
-.competition-coffee-snacks .cca-snacks-content-box{margin-top: 25%}
-.competition-coffee-snacks .competition-snacks-wrapper{display: flex;background-color: white;
-    box-shadow: 2px 2px 27px 0px rgba(0,0,0,0.15);padding: 3%; margin-bottom: 5%;}
-.competition-snacks-wrapper ul{list-style-type: disc; padding-left: 15px;}
-.competition-snacks-wrapper ul li{font-weight: bold}
-.competition-snacks-wrapper .cca-our-services-content {
-    width: 55%;
-}
-.competition-snacks-wrapper .cca-our-services-content p {
-    color: #706463;
-    font-family: 'Klinic Book', serif;
-    font-size: 1.25rem;
-    line-height: 1.3;
-    padding-bottom: 3%;
-}
-.competition-snacks-wrapper .cca-our-services-content a {
-    color: #706463;
-    font-family: 'Klinic Book', serif;
-    font-size: 1.25rem; text-transform: uppercase;
-}
-.competition-snacks-wrapper .cca-our-services-content h1, .competition-coffee-about .cca-snacks-content-box h1{display: block}
-.competition-coffee-about .cca-our-services-content h1:after{top: 45px}
-.competition-coffee-snacks .cca-snacks-services  h1{display: block;}
+    box-shadow: 2px 2px 27px 0px rgba(0, 0, 0, 0.15);
+    padding: 3%;
+    margin-bottom: 5%;
+  }
+  
+  .competition-snacks-wrapper {
+    ul {
+      list-style-type: disc;
+      padding-left: 15px;
+      li {
+        font-weight: bold;
+      }
+    }
+    .cca-our-services-content {
+      width: 55%;
+      p {
+        color: #706463;
+        font-family: 'Klinic Book', serif;
+        font-size: 1.25rem;
+        line-height: 1.3;
+        padding-bottom: 3%;
+      }
+      a {
+        color: #706463;
+        font-family: 'Klinic Book', serif;
+        font-size: 1.25rem;
+        text-transform: uppercase;
+      }
+      h1 {
+        display: block;
+      }
+    }
+  }
+  
+  .competition-coffee-about {
+    .cca-snacks-content-box h1 {
+      display: block;
+    }
+    .cca-our-services-content h1:after {
+      top: 45px;
+    }
+  }
+  
+  .competition-coffee-snacks {
+    .cca-snacks-services h1 {
+      display: block;
+    }
+    .cce-equipment-container:not(:nth-child(3)) {
+      margin-top: 15px;
+    }
+  }
